--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,17 @@
 @font-face {
   font-family: 'Fabrik-Bold';
-  src: url('font/Fabrik-Bold.otf');
+  src: url('../font/Fabrik-Bold.otf');
 }
 
 @font-face {
   font-family: 'Fabrik-Regular';
-  src: url('font/Fabrik-Regular.otf');
+  src: url('../font/Fabrik-Regular.otf');
 }
 
 html,body {
   font-family: 'Fabrik-Regular';
   margin:0;
+  position: relative;
 }
 
 h1,h2 {
@@ -35,12 +36,11 @@ p,a {
 .bottom-btn {
   position: absolute;
   bottom:20px;
-  margin: auto;
 }
 
 .container, .container-about {
   max-width:100vw;
-  max-height:100vh;
+  min-height:100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,8 +50,8 @@ p,a {
 
 /* HOME */
 
-.container img, .container video {
-  width:70vw;
+.container video {
+  width:1052px;
   height:auto;
 }
 
@@ -75,10 +75,6 @@ hr {
   padding:0 10em;
 }
 
-.about-content {
-  padding-top: 4em;
-}
-
 .about-content, .about-infos {
   width:100%;
   display: flex;
@@ -87,9 +83,13 @@ hr {
   align-items: center;
 }
 
+.about-content {
+  margin-top: -5em;
+}
+
 .about-infos {
   justify-content: space-between;
-  flex-wrap: wrap;
+  margin-bottom: 4em;
 }
 
 .paraf {
