--- a/style/style.css
+++ b/style/style.css
@@ -55,8 +55,9 @@ p,a {
   height:auto;
 }
 
-.container a {
-  font-size: 1.4em;
+.container .bottom-btn {
+  cursor:pointer;
+  font-size: 1.2em;
 }
 
 /* ABOUT */
@@ -94,4 +95,35 @@ hr {
 
 .paraf {
   width:23vw;
+}
+
+/* EFFECTS CLASSES */
+.left-start {
+  opacity: 0 !important;
+  transform: translateX(-1500px) !important;
+  transition-duration: 1s;
+}
+.right-start {
+  opacity: 0 !important;
+  transform: translateX(1500px) !important;
+  transition-duration: 1s;
+}
+.is-ready{
+    opacity: 1 !important;
+    transform: translateX(0) !important;
+    transition-duration:0.5s;
+}
+.left-remove {
+  opacity: 0 !important;
+  transform: translateX(1500px)!important;
+  transition-duration: 1s;
+}
+.right-remove {
+  opacity: 0 !important;
+  transform: translateX(-1500px)!important;
+  transition-duration: 1s;
+}
+
+.blur {
+  filter:blur(3px);
 }
